--- a/src/interfaz/Principal3.form
+++ b/src/interfaz/Principal3.form
@@ -69,6 +69,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="txtMontoAhorrado">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtMontoAhorradoKeyTyped"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="170" y="110" width="110" height="30"/>
